--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Nier 2B</title>
-     <link href="//cdn.bootcss.com/tether/1.3.6/css/tether.min.css" rel="stylesheet">
-    <script src="//cdn.bootcss.com/tether/1.3.6/js/tether.min.js"></script>
+     <link href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/css/tether.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/stylesheet.css" rel="stylesheet">
 </head>
